--- a/src/pages/contactez.astro
+++ b/src/pages/contactez.astro
@@ -57,7 +57,7 @@ const carouselData = [
 		image: "/images/avatar.png",
 		name: "Valérie P.",
 	},
-    {
+	{
 		text: "J'ai eu des cours super avec Dante - très efficaces, adapté, interactifs et amusants. Je recommande fortement les cours avec lui !",
 		image: "/images/avatar.png",
 		name: "Ebba",
@@ -161,134 +161,134 @@ const carouselData = [
 ---
 
 <>
-    <Layout>
-        <BigSection class="max-w-7xl">
-            <div
-                class="space-y-4 sm:grid sm:grid-cols-2 lg:grid-cols-4 sm:gap-4 xl:gap-8 sm:space-y-0 md:mt-12"
-            >
-                <a
-                    href="#"
-                    class="block px-8 py-4 text-center bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-700 dark:border-gray-600 hover:shadow-lg dark:hover:shadow-lg-light"
-                >
-                    <div class="flex justify-center">
-                        <Location class="h-12" />
-                    </div>
-                    <h3
-                        class="font-semibold text-2xl text-grayDark dark:text-white mt-3.5"
-                    >
-                        Direccion:
-                    </h3>
-                    <h4
-                        class="font-normal text-xl text-grayDark dark:text-white mt-3.5"
-                    >
-                        Avenue Jurigoz 20b20 bis 1006, Lausanne
-                    </h4>
-                </a>
-                <a
-                    href="#"
-                    class="block px-8 py-4 text-center bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-700 dark:border-gray-600 hover:shadow-lg dark:hover:shadow-lg-light"
-                >
-                    <div class="flex justify-center">
-                        <PhoneIcon class="h-12" />
-                    </div>
-                    <h3
-                        class="font-semibold text-2xl text-grayDark dark:text-white mt-3.5"
-                    >
-                        Celular:
-                    </h3>
-                    <h4
-                        class="font-normal text-xl text-grayDark dark:text-white mt-3.5"
-                    >
-                        +41 79 298 93 56
-                    </h4>
-                </a>
-                <a
-                    href="#"
-                    class="col-span-2 block px-8 py-4 text-center bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-700 dark:border-gray-600 hover:shadow-lg dark:hover:shadow-lg-light"
-                >
-                    <div class="flex justify-center">
-                        <ClockIcon class="h-12" />
-                    </div>
-                    <div class="flex gap-2 gap-x-4">
-                        <div class="flex flex-col">
-                            <h3
-                                class="font-semibold text-2xl text-grayDark dark:text-white mt-3.5"
-                            >
-                                Lunes:
-                            </h3>
-                            <h4
-                                class="font-normal text-xl text-grayDark dark:text-white mt-3.5"
-                            >
-                                9:00–20:00
-                            </h4>
-                        </div>
-                        <div class="flex flex-col">
-                            <h3
-                                class="font-semibold text-2xl text-grayDark dark:text-white mt-3.5"
-                            >
-                                Martes:
-                            </h3>
-                            <h4
-                                class="font-normal text-xl text-grayDark dark:text-white mt-3.5"
-                            >
-                                9:00–20:00
-                            </h4>
-                        </div>
-                        <div class="flex flex-col">
-                            <h3
-                                class="font-semibold text-2xl text-grayDark dark:text-white mt-3.5"
-                            >
-                                Miércoles:
-                            </h3>
-                            <h4
-                                class="font-normal text-xl text-grayDark dark:text-white mt-3.5"
-                            >
-                                9:00–20:00
-                            </h4>
-                        </div>
-                        <div class="flex flex-col">
-                            <h3
-                                class="font-semibold text-2xl text-grayDark dark:text-white mt-3.5"
-                            >
-                                Jueves:
-                            </h3>
-                            <h4
-                                class="font-normal text-xl text-grayDark dark:text-white mt-3.5"
-                            >
-                                9:00–20:00
-                            </h4>
-                        </div>
-                        <div class="flex flex-col">
-                            <h3
-                                class="font-semibold text-2xl text-grayDark dark:text-white mt-3.5"
-                            >
-                                Viernes:
-                            </h3>
-                            <h4
-                                class="font-normal text-xl text-grayDark dark:text-white mt-3.5"
-                            >
-                                8:30–11:30
-                            </h4>
-                        </div>
-                    </div>
-                </a>
-            </div>
-        </BigSection>
-        <BigSection class="">
-            <ContactForm client:load />
-        </BigSection>
-        <BigSection class="max-w-7xl">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1617.0147333876905!2d6.634916922991815!3d46.512249868722755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478c2fcbd13b2583%3A0x5b381032d9600af3!2sAv.%20de%20Jurigoz%2010%2C%201006%20Lausanne%2C%20Suiza!5e0!3m2!1ses-419!2spe!4v1737819906691!5m2!1ses-419!2spe"
-                width="100%"
-                height="450"
-                style="border:0;"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </BigSection>
-        <BigSection class="max-w-7xl">
-            <Testimonios items={carouselData} client:load />
-        </BigSection>
-    </Layout>
+	<Layout>
+		<BigSection class="max-w-7xl">
+			<div
+				class="space-y-4 sm:grid sm:grid-cols-2 lg:grid-cols-4 sm:gap-4 xl:gap-8 sm:space-y-0 md:mt-12"
+			>
+				<a
+					href="#"
+					class="block px-8 py-4 text-center bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-700 dark:border-gray-600 hover:shadow-lg dark:hover:shadow-lg-light"
+				>
+					<div class="flex justify-center">
+						<Location class="h-12" />
+					</div>
+					<h3
+						class="font-semibold text-2xl text-grayDark dark:text-white mt-3.5"
+					>
+						Adresse:
+					</h3>
+					<h4
+						class="font-normal text-xl text-grayDark dark:text-white mt-3.5"
+					>
+						Avenue Jurigoz 20b20 bis 1006, Lausanne
+					</h4>
+				</a>
+				<a
+					href="#"
+					class="block px-8 py-4 text-center bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-700 dark:border-gray-600 hover:shadow-lg dark:hover:shadow-lg-light"
+				>
+					<div class="flex justify-center">
+						<PhoneIcon class="h-12" />
+					</div>
+					<h3
+						class="font-semibold text-2xl text-grayDark dark:text-white mt-3.5"
+					>
+						Téléphone:
+					</h3>
+					<h4
+						class="font-normal text-xl text-grayDark dark:text-white mt-3.5"
+					>
+						+41 79 298 93 56
+					</h4>
+				</a>
+				<a
+					href="#"
+					class="col-span-2 block px-8 py-4 text-center bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-700 dark:border-gray-600 hover:shadow-lg dark:hover:shadow-lg-light"
+				>
+					<div class="flex justify-center">
+						<ClockIcon class="h-12" />
+					</div>
+					<div class="flex flex-col md:flex-row gap-2 gap-x-4">
+						<div class="flex flex-col">
+							<h3
+								class="font-semibold text-2xl text-grayDark dark:text-white mt-3.5"
+							>
+								Lundi:
+							</h3>
+							<h4
+								class="font-normal text-xl text-grayDark dark:text-white mt-3.5"
+							>
+								9:00–20:00
+							</h4>
+						</div>
+						<div class="flex flex-col">
+							<h3
+								class="font-semibold text-2xl text-grayDark dark:text-white mt-3.5"
+							>
+								Mardi:
+							</h3>
+							<h4
+								class="font-normal text-xl text-grayDark dark:text-white mt-3.5"
+							>
+								9:00–20:00
+							</h4>
+						</div>
+						<div class="flex flex-col">
+							<h3
+								class="font-semibold text-2xl text-grayDark dark:text-white mt-3.5"
+							>
+								Mercredi:
+							</h3>
+							<h4
+								class="font-normal text-xl text-grayDark dark:text-white mt-3.5"
+							>
+								9:00–20:00
+							</h4>
+						</div>
+						<div class="flex flex-col">
+							<h3
+								class="font-semibold text-2xl text-grayDark dark:text-white mt-3.5"
+							>
+								Jeudi :
+							</h3>
+							<h4
+								class="font-normal text-xl text-grayDark dark:text-white mt-3.5"
+							>
+								9:00–20:00
+							</h4>
+						</div>
+						<div class="flex flex-col">
+							<h3
+								class="font-semibold text-2xl text-grayDark dark:text-white mt-3.5"
+							>
+								Vendredi:
+							</h3>
+							<h4
+								class="font-normal text-xl text-grayDark dark:text-white mt-3.5"
+							>
+								8:30–11:30
+							</h4>
+						</div>
+					</div>
+				</a>
+			</div>
+		</BigSection>
+		<BigSection class="">
+			<ContactForm client:load />
+		</BigSection>
+		<BigSection class="max-w-7xl">
+			<iframe
+				src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d798.192321029611!2d6.6359208931203515!3d46.51247409624602!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sJurigoz%2020bis20%20Lausanne-%C2%A01006!5e0!3m2!1ses-419!2spe!4v1738683240571!5m2!1ses-419!2spe"
+				width="100%"
+				height="450"
+				style="border:0;"
+				allowfullscreen=""
+				loading="lazy"
+				referrerpolicy="no-referrer-when-downgrade"></iframe>
+		</BigSection>
+		<BigSection class="max-w-7xl">
+			<Testimonios items={carouselData} client:load />
+		</BigSection>
+	</Layout>
 </>
