--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -65,7 +65,7 @@ const currentYear = new Date().getFullYear();
                             <li>
                                 <a
                                     class="text-grayMedium dark:text-white dark:hover:text-yellowSecondary hover:text-yellowSecondary font-semibold block pb-2 text-sm"
-                                    href="/">D'accueil</a
+                                    href="/">Accueil</a
                                 >
                             </li>
                             <li>
@@ -73,7 +73,7 @@ const currentYear = new Date().getFullYear();
                                     class="text-grayMedium dark:text-white dark:hover:text-yellowSecondary hover:text-yellowSecondary font-semibold block pb-2 text-sm"
                                     href="/sur-moi"
                                 >
-                                    A propos de moi</a
+                                    À propos de moi</a
                                 >
                             </li>
                             <li>
