--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -4,7 +4,7 @@ const { items } = Astro.props;
 ---
 
 <div
-    class="flex flex-col items-center md:items-start text-center md:text-left space-y-6 max-w-lg gap-x-12"
+    class="flex flex-row md:flex-col items-center md:items-start text-center md:text-left space-y-6 max-w-lg gap-x-12"
 >
     {
         items.map((section) => (
